--- a/email_theme/empresa_negocios_vagas_ativada.html
+++ b/email_theme/empresa_negocios_vagas_ativada.html
@@ -21,20 +21,21 @@
           Oi, [[FirstName]]
         </p>
         <p style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;">
-          Você solicitou a alteração de sua senha.
+          sua empresa foi ativada!
         </p>
         <p style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;">
-          Clique no botão abaixo para alterar.
+          Clique no botão abaixo para acessar.
         </p>
         <p style="font-family: 'Roboto', sans-serif;text-align: center; margin-top:10%;margin-bottom:15px">
-          <a href="#" style="background: #01BCA2;
-              color: #fff;
-              padding: 12px 15px;
-              font-size: 18px;
-              font-weight: lighter;
-              text-decoration: none;">
-            Alterar Senha
-          </a>
+            <a href="#" 
+            style="background: #01BCA2;
+            color: #fff;
+            padding: 12px 15px;
+            font-size: 18px;
+            font-weight: lighter;
+            text-decoration: none;"> 
+              Acessar
+            </a> 
         </p>
       </td>
     </tr>
