--- a/email_theme/conta_aprovada.html
+++ b/email_theme/conta_aprovada.html
@@ -21,19 +21,19 @@
           Oi, [[FirstName]]
         </p>
         <p style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;">
-          Você solicitou a alteração de sua senha.
+          sua conta foi aprovada!
         </p>
         <p style="color:#000; font-weight: regular;margin:5% 5% 0%;font-family: 'Roboto', sans-serif;font-size:24px;">
-          Clique no botão abaixo para alterar.
+          Clique no botão abaixo para acessar.
         </p>
         <p style="font-family: 'Roboto', sans-serif;text-align: center; margin-top:10%;margin-bottom:15px">
           <a href="#" style="background: #01BCA2;
-              color: #fff;
-              padding: 12px 15px;
-              font-size: 18px;
-              font-weight: lighter;
-              text-decoration: none;">
-            Alterar Senha
+            color: #fff;
+            padding: 12px 15px;
+            font-size: 18px;
+            font-weight: lighter;
+            text-decoration: none;">
+            Acessar
           </a>
         </p>
       </td>
